debug swinger,collect dataset for prediction of revenue
